SERVER-17280 geo near must propagate invalidate messages to IndexScan used by DensityEstimator