src/mongo/db/exec/geo_near.cpp
@@ -303,6 +303,8 @@ namespace mongo {
                                    WorkingSetID* out,
                                    double* estimatedDistance);
 
+        void invalidate(OperationContext* txn, const RecordId& dl, InvalidationType type);
+
     private:
         void buildIndexScan(OperationContext* txn, WorkingSet* workingSet, Collection* collection);
 
@@ -403,6 +405,15 @@ namespace mongo {
         return state;
     }
 
+    void GeoNear2DStage::DensityEstimator::invalidate(OperationContext* txn,
+                                                      const RecordId& dl,
+                                                      InvalidationType type) {
+        if (_indexScan) {
+            _indexScan->invalidate(txn, dl, type);
+        }
+    }
+
+
     PlanStage::StageState GeoNear2DStage::initialize(OperationContext* txn,
                                                      WorkingSet* workingSet,
                                                      Collection* collection,
@@ -456,6 +467,14 @@ namespace mongo {
     }
 
     GeoNear2DStage::~GeoNear2DStage() {
+    }
+
+    void GeoNear2DStage::finishInvalidate(OperationContext* txn,
+                                          const RecordId& dl,
+                                          InvalidationType type) {
+        if (_densityEstimator) {
+            _densityEstimator->invalidate(txn, dl, type);
+        }
     }
 
     namespace {
@@ -976,6 +995,8 @@ namespace mongo {
                                    WorkingSetID* out,
                                    double* estimatedDistance);
 
+        void invalidate(OperationContext* txn, const RecordId& dl, InvalidationType type);
+
     private:
         void buildIndexScan(OperationContext* txn, WorkingSet* workingSet, Collection* collection);
 
@@ -1075,6 +1096,14 @@ namespace mongo {
         return state;
     }
 
+    void GeoNear2DSphereStage::DensityEstimator::invalidate(OperationContext* txn,
+                                                            const RecordId& dl,
+                                                            InvalidationType type) {
+        if (_indexScan) {
+            _indexScan->invalidate(txn, dl, type);
+        }
+    }
+
 
     PlanStage::StageState GeoNear2DSphereStage::initialize(OperationContext* txn,
                                                            WorkingSet* workingSet,
@@ -1105,6 +1134,14 @@ namespace mongo {
         }
 
         return state;
+    }
+
+    void GeoNear2DSphereStage::finishInvalidate(OperationContext* txn,
+                                                const RecordId& dl,
+                                                InvalidationType type) {
+        if (_densityEstimator) {
+            _densityEstimator->invalidate(txn, dl, type);
+        }
     }
 
     StatusWith<NearStage::CoveredInterval*> //
