src/mongo/dbtests/query_stage_near.cpp
@@ -183,6 +183,12 @@ namespace {
             return IS_EOF;
         }
 
+        virtual void finishInvalidate(OperationContext* txn,
+                                      const RecordId& dl,
+                                      InvalidationType type) {
+            invariant(!"MockNearStage should not receive invalidations");
+        }
+
     private:
 
         OwnedPointerVector<MockInterval> _intervals;
